//bugs.freedesktop.org/show_bug.cgi?id=4256> Patch #3046     <https://bugs.freedesktop.org/attachment.cgi?id=3046> Define     MAXHOSTNAMELEN if platform doesn't (Michael Banck)